# rust-tool-template

./: Cargo.toml  Dockerfile  README.md  docker-bake.hcl  rustfmt.toml
.github/workflows/: bake.yml  ci.yml
src/: main.rs  opts.rs  util.rs
