[package]
name = "rust_tool_template"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = { version = "0.6", features = ["capture-spantrace"] }
dotenvy = "0.15.7"
eyre = { version = "0.6" }
once_cell = "1.17.1"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
built = { version = "0.6.0", features = ["chrono", "git2"] }
